Notebooks and AI

--- a/src/data_retrieval/retrieve_xmls.ipynb
+++ b/src/data_retrieval/retrieve_xmls.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL_SB_PUBLICATIONS = \"https://raw.githubusercontent.com/jgalazka/SB_publications/main/SB_publication_PMC.csv\"\n",
+    "SB_PUBLICATIONS_PMC_CLEAN = \"data/SB_publication_PMC_clean.csv\"\n",
     "OUTPUT_FILE = \"data/SB_publication_PMC_with_xml.parquet\""
    ]
   },
@@ -68,7 +68,7 @@
     "    Returns:\n",
     "        bytes: The raw XML content of the article as returned by the Entrez API.\n",
     "    \"\"\"\n",
-    "    Entrez.email = \"dacfortuny@gmail.com\"\n",
+    "    Entrez.email = \"ENTER_YOUR_EMAIL_HERE\"\n",
     "    retries = 2\n",
     "    delay = 10\n",
     "    for attempt in range(retries + 1):\n",
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(URL_SB_PUBLICATIONS)\n",
+    "df = pd.read_csv(SB_PUBLICATIONS_PMC_CLEAN, sep=\"|\")\n",
     "df.head()"
    ]
   },
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"pmc\"] = df[\"Link\"].apply(lambda x: x.split(\"/\")[-2].replace(\"PMC\", \"\"))\n",
+    "df[\"pmc\"] = df[\"link\"].apply(lambda x: x.split(\"/\")[-2].replace(\"PMC\", \"\"))\n",
     "df.head()"
    ]
   },
